--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   "author": "Mohamed Shalaby",
   "license": "MIT",
   "dependencies": {
+    "@types/xlsx": "^0.0.35",
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.0",
@@ -42,7 +43,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
-    "redis": "^4.6.10"
+    "redis": "^4.6.10",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
