--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@types/xlsx": "^0.0.35",
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
+    "commander": "^14.0.0",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/commander": "^2.12.0",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
