--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,38 +1,22 @@
 FROM node:18-alpine AS base
 
-# Install dependencies only when needed
+# Install dependencies
 FROM base AS deps
 WORKDIR /app
-
-# Copy package files
 COPY package*.json ./
-RUN npm ci --only=production && npm cache clean --force
+RUN npm install --only=production
 
-# Rebuild the source code only when needed
+# Build the source code
 FROM base AS builder
 WORKDIR /app
-
-# Copy package files and install all dependencies
 COPY package*.json ./
-RUN npm ci
-
-# Copy source code
+RUN npm install
 COPY . .
-
-# Build the application
 RUN npm run build
 
-# Production image, copy all the files and run the app
+# Production image with nginx
 FROM nginx:alpine AS runner
-
-# Copy built assets from builder stage
 COPY --from=builder /app/build /usr/share/nginx/html
-
-# Copy nginx configuration
 COPY nginx.conf /etc/nginx/nginx.conf
-
-# Expose port
 EXPOSE 80
-
-# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
