--- a/mongo/mongod.conf
+++ b/mongo/mongod.conf
@@ -1,4 +1,4 @@
-# MongoDB Production Configuration
+# MongoDB Production Configuration - No Authentication
 storage:
   dbPath: /data/db
   journal:
@@ -18,13 +18,10 @@ net:
   bindIp: 0.0.0.0
   maxIncomingConnections: 100
 
-security:
-  authorization: enabled
+# Disable authentication for simpler deployment
+# security:
+#   authorization: enabled
 
 operationProfiling:
   slowOpThresholdMs: 100
   mode: slowOp
-
-replication:
-  replSetName: "carbonytics"
-  
