--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,13 +25,13 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: carbonytics-frontend
+    expose:
+      - "3000"
     environment:
       - NODE_ENV=production
-      - REACT_APP_API_URL=http://localhost:5000
+      - REACT_APP_API_URL=/api
       - REACT_APP_APP_NAME=Carbonytics
       - REACT_APP_VERSION=1.0.0
-    env_file:
-      - .env.production
     depends_on:
       - backend
     restart: unless-stopped
@@ -44,6 +44,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: carbonytics-backend
+    expose:
+      - "5000"
     environment:
       - NODE_ENV=production
       - PORT=5000
@@ -73,21 +75,19 @@ services:
       - uploads:/app/uploads
       - logs:/app/logs
 
-  # MongoDB Production
+  # MongoDB Production - FIXED: Removed problematic config file mount
   mongo:
     image: mongo:7.0
     container_name: carbonytics-mongo
     environment:
       - MONGO_INITDB_DATABASE=carbonytics_prod
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USER}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
-    env_file:
-      - .env.production
+  #    - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USER}
+  #    - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
     volumes:
       - mongo_data:/data/db
       - ./backups/mongo:/backup
-      - ./mongo/mongod.conf:/etc/mongod.conf
-    command: ["mongod", "--config", "/etc/mongod.conf"]
+      # REMOVED: - ./mongo/mongod.conf:/etc/mongod.conf
+    # REMOVED: command: ["mongod", "--config", "/etc/mongod.conf"]
     restart: unless-stopped
     networks:
       - carbonytics-network
@@ -96,7 +96,7 @@ services:
   redis:
     image: redis:7.2-alpine
     container_name: carbonytics-redis
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
+    command: redis-server --appendonly yes # --requirepass ${REDIS_PASSWORD}
     env_file:
       - .env.production
     volumes:
