--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./frontend:/app
       - /app/node_modules
     environment:
-      - REACT_APP_API_URL=http://localhost:5000
+      - REACT_APP_API_URL=http://localhost:5000/api
     depends_on:
       - backend
 
@@ -30,7 +30,7 @@ services:
       - NODE_ENV=development
       - MONGODB_URI=mongodb://mongo:27017/carbonytics
       - REDIS_URL=redis://redis:6379
-      - JWT_SECRET=4cbd5d51d8447b42f4675b49d4e77e231765898b5e7daf0adfc87441b8f978d0
+      - JWT_SECRET=development-secret-key
       - CLIENT_URL=http://localhost:3000
     depends_on:
       - mongo
