--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,8 +15,16 @@ COPY . .
 RUN npm run build
 
 # Production image with nginx
-FROM nginx:alpine AS runner
-COPY --from=builder /app/build /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# FROM nginx:alpine AS runner
+# COPY --from=builder /app/build /usr/share/nginx/html
+# COPY nginx.conf /etc/nginx/nginx.conf
+# EXPOSE 80
+# CMD ["nginx", "-g", "daemon off;"]
+
+# Production image - serve on port 3000
+FROM node:18-alpine AS runner
+WORKDIR /app
+RUN npm install -g serve
+COPY --from=builder /app/build ./build
+EXPOSE 3000
+CMD ["serve", "-s", "build", "-l", "3000"]
